--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "a819ad17",
    "metadata": {},
    "outputs": [],
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "39e8fee5",
    "metadata": {},
    "outputs": [
@@ -1476,13 +1476,33 @@
        "'I am sorry, I cannot provide information on specific \\nindividuals unless they are well-known public figures'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "string.expandtabs(5)"
+    "string.expandtabs(tabsize=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8d507e23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digvijay                                                                                            Mohite\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1='Digvijay\\tMohite'\n",
+    "str2 = str1.expandtabs(tabsize=100)\n",
+    "print(str2)"
    ]
   },
   {
@@ -2376,7 +2396,7 @@
     "\n",
     "print('*'*100)\n",
     "\n",
-    "var=999.99 # for same integer value for multiple variable the id will not same\n",
+    "var=999.99 # for same floating value for multiple variable the id will not same\n",
     "var1=999.99\n",
     "var2=999.99\n",
     "\n",
@@ -4920,8 +4940,7 @@
     }
    ],
    "source": [
-    "# once set is created we can not change element's value\n",
-    "# but we can add values\n",
+    "# once set is created we can not change element's value but we can add values\n",
     "print(set2)\n",
     "set2.add(\"mango\")\n",
     "print(set2)"
@@ -5054,8 +5073,7 @@
     }
    ],
    "source": [
-    "# pop() method >> Remove and return an arbitrary(randomly) set element\n",
-    "# is set is empty pop() will create an error\n",
+    "# pop() method >> Remove and return an arbitrary(randomly) set element is set is empty pop() will create an error\n",
     "set1.pop()\n",
     "print(set1)"
    ]
