--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -9489,7 +9489,7 @@
    "id": "ddf39ad0",
    "metadata": {},
    "source": [
-    "###### 6. if dont know number of para then add ** before identifier"
+    "###### 6. if dont know number of KEY-VALUE para then add ** before identifier"
    ]
   },
   {
@@ -10217,7 +10217,7 @@
    "id": "93a63ca6",
    "metadata": {},
    "source": [
-    "Inheritance is a property of object oriented language that allows a class to derive properties of other/parent class\n",
+    "Inheritance is a fundamental concept in object-oriented programming (OOP) that allows a class to inherit properties and behaviors from another class.\n",
     "\n",
     "parent / Base class :\n",
     "It is the class which gets inherited\n",
@@ -10294,7 +10294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "c6ee960b",
    "metadata": {},
    "outputs": [
@@ -10303,13 +10303,13 @@
      "output_type": "stream",
      "text": [
       "First Name : Sunil\n",
-      "Last Name : Gavaskar\n"
+      "Last Name  : Gavaskar\n"
      ]
     }
    ],
    "source": [
     "class person:\n",
-    "    def __init__(self,flm,lnm):\n",
+    "    def __init__(self,fnm,lnm):\n",
     "        self.fname=fnm\n",
     "        self.lname=lnm\n",
     "        \n",
@@ -10317,7 +10317,7 @@
     "        print('First Name :',self.fname)\n",
     "        print('Last Name  :',self.lname)\n",
     "        \n",
-    "class Student(Person):\n",
+    "class Student(person):\n",
     "    pass\n",
     "\n",
     "s=Student('Sunil','Gavaskar')\n",
