--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1119,8 +1119,382 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23e70151",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a =10\n",
+      "enter b =20\n",
+      "30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fuctuin \n",
+    "# 1. Calling the function\n",
+    "def add():\n",
+    "    a = float(input('enter a ='))\n",
+    "    b = float(input('enter b ='))\n",
+    "    c = a+b\n",
+    "    print(c)\n",
+    "    \n",
+    "add()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b6c47d78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. argumennt in the function \n",
+    "def add(a,b):\n",
+    "    c = a+b\n",
+    "    print(c)\n",
+    "    \n",
+    "add(100,200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "92e4b43e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. return the values\n",
+    "\n",
+    "def add(a,b):\n",
+    "    result = a+b\n",
+    "    return result\n",
+    "\n",
+    "add(100, 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "733761c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All the letters : ('A', 'B', 'C')\n",
+      "First position of letter : A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. unknown parameters\n",
+    "\n",
+    "def my_function(*letter):\n",
+    "        print('All the letters :',letter)\n",
+    "        print(\"First position of letter :\", letter[0])\n",
+    "        \n",
+    "my_function('A','B','C')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a86b2609",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All the letters : {'A': 'A', 'B': 'B', 'C': 'C'}\n",
+      "First position of letter : A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. UNKNOWN KEY-VALUE PAIR PARAMETERS\n",
+    "\n",
+    "def my_function(**letter):\n",
+    "        print('All the letters :',letter)\n",
+    "        print(\"First position of letter :\", letter[\"A\"])\n",
+    "        \n",
+    "my_function(A='A',B='B',C='C')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1860eab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alternate email of student :\n",
+      "Alternate email is :  default@email.com\n",
+      "Alternate email is :  digvi@email.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Default value to parameter\n",
+    "\n",
+    "def AltEmail(email='default@email.com'):\n",
+    "    print(\"Alternate email is : \",email)\n",
+    "\n",
+    "print(\"Alternate email of student :\")\n",
+    "\n",
+    "AltEmail()\n",
+    "AltEmail('digvi@email.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0b1c4a40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = lambda x:x**2\n",
+    "square(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "06af52f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiplication = lambda x,y : x*y\n",
+    "\n",
+    "multiplication(4,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0222c6af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value of n is : 1000\n",
+      "value of n is : 1000\n",
+      "1100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(n):\n",
+    "    print('value of n is :',n)\n",
+    "    \n",
+    "    return lambda x : x+n\n",
+    "\n",
+    "add(1000)\n",
+    "\n",
+    "other = add(1000)\n",
+    "print(other(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "212bd49d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of student : Digvijay\n",
+      "Branch of student : IT\n"
+     ]
+    }
+   ],
+   "source": [
+    "class student:\n",
+    "    def __init__(self, name, branch):\n",
+    "        self.name = name\n",
+    "        self.branch = branch\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('Name of student :',self.name)\n",
+    "        print('Branch of student :',self.branch)\n",
+    "        \n",
+    "obj=student('Digvijay', 'IT')\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "802e47d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first name of student 1 :ABHI\n",
+      "Enter total marks in percentage 1 :100\n",
+      "Enter first name of student 2 :SHOURYA\n",
+      "Enter total marks in percentage 2 :99\n",
+      "Enter first name of student 3 :ATHARV\n",
+      "Enter total marks in percentage 3 :98\n",
+      "Displaying the details of students :\n",
+      "Name = ABHI, Marks = 100.0\n",
+      "Name = SHOURYA, Marks = 99.0\n",
+      "Name = ATHARV, Marks = 98.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class stud:\n",
+    "    def __init__(self, name, marks):\n",
+    "        self.name = name\n",
+    "        self.marks = marks\n",
+    "        \n",
+    "students = []\n",
+    "\n",
+    "for i in range(1,4):\n",
+    "    name = input('Enter first name of student {} :'.format(i))\n",
+    "    marks = float(input('Enter total marks in percentage {} :'.format(i)))\n",
+    "    obj = stud(name, marks)\n",
+    "    students.append(obj)\n",
+    "    \n",
+    "print('Displaying the details of students :')\n",
+    "\n",
+    "for obj in students:\n",
+    "    print(\"Name = {}, Marks = {}\".format(obj.name, obj.marks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "1649df52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DISPLAYING THROUGH BASE CLASS\n",
+      "Name of Player : Virat\n",
+      "Team of Player : INDIA\n",
+      "None\n",
+      "****************************************************************************************************\n",
+      "DISPLAYING THROUGH DERIVED CLASS\n",
+      "Name of Player : Virat\n",
+      "Team of Player : INDIA\n",
+      "Jercy of Player : 18\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class base:\n",
+    "    \n",
+    "    def __init__(self, name, team):\n",
+    "        self.name = name\n",
+    "        self.team = team\n",
+    "        \n",
+    "    def bdisplay(self):\n",
+    "        print('DISPLAYING THROUGH BASE CLASS')\n",
+    "        print('Name of Player :',self.name)\n",
+    "        print('Team of Player :',self.team)\n",
+    "        \n",
+    "class derived(base):\n",
+    "    \n",
+    "    def __init__(self, name, team, jercy):\n",
+    "        self.name = name\n",
+    "        self.team = team\n",
+    "        self.jercy = jercy\n",
+    "        \n",
+    "    def ddisplay(self):\n",
+    "        print('DISPLAYING THROUGH DERIVED CLASS')\n",
+    "        print('Name of Player :', self.name)\n",
+    "        print('Team of Player :',self.team)\n",
+    "        print('Jercy of Player :',self.jercy)\n",
+    "        \n",
+    "obj_base = base('Virat', 'INDIA')\n",
+    "obj_derive = derived('Virat', 'INDIA', 18)\n",
+    "\n",
+    "print(obj_base.bdisplay())\n",
+    "print('*'*100)\n",
+    "print(obj_derive.ddisplay())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017404b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bab44cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11803feb",
    "metadata": {},
    "outputs": [],
    "source": []
