--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6c47d78",
+   "id": "dc9299ce",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "92e4b43e",
+   "id": "c53be3a0",
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "733761c9",
+   "id": "0ff5a6fd",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a86b2609",
+   "id": "d0c36f63",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1860eab2",
+   "id": "2bad43c4",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0b1c4a40",
+   "id": "25c4aa6c",
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "06af52f4",
+   "id": "f4b14ec2",
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0222c6af",
+   "id": "fbce679b",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "212bd49d",
+   "id": "30a94888",
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "802e47d8",
+   "id": "70223022",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1649df52",
+   "id": "08754164",
    "metadata": {},
    "outputs": [
     {
@@ -1477,24 +1477,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "017404b5",
+   "execution_count": 47,
+   "id": "fd0330d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup=(1,2,3,4,5)\n",
+    "\n",
+    "itr = iter(tup)\n",
+    "print(next(itr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "fe80ba2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup=(1,2,3,4,5)\n",
+    "\n",
+    "itr = iter(tup)\n",
+    "for i in itr:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4857850f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n",
+      " \n",
+      "l\n",
+      "o\n",
+      "v\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "string = \"I love python\"\n",
+    "\n",
+    "itr = iter(string)\n",
+    "\n",
+    "for i in itr:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "40d08e58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"fname\": \"Digvijay\",\n",
+      "    \"lname\": \"Mohite\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "js = {\n",
+    "    \"fname\":'Digvijay',\n",
+    "    'lname':'Mohite'\n",
+    "}\n",
+    "\n",
+    "json_obj = json.dumps(js, indent=4)\n",
+    "print(json_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "51520974",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "4644725d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 64), match='The python programming was developed in 1991 by G>\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"The python programming was developed in 1991 by Guido Van Rossom\"\n",
+    "x = re.search(\"^The.*Rossom$\",txt)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "498c1de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The python programming was developed in 1991 by Guido Van Rossom\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "de6eb9f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The_python_programming_was_developed_in_1991_by_Guido_Van_Rossom\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"The python programming was developed in 1991 by Guido Van Rossom\"\n",
+    "x = re.sub(\"\\s\",\"_\",txt)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "0dce303c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number :99.99\n",
+      "Not valid number\n",
+      "Enter Number :100\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        x=int(input('Enter Number :'))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Not valid number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "6466d978",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "sorry no number below zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[86], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msorry no number below zero\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: sorry no number below zero"
+     ]
+    }
+   ],
+   "source": [
+    "x=-1\n",
+    "\n",
+    "if x < 0:\n",
+    "    raise Exception(\"sorry no number below zero\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bab44cc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11803feb",
+   "id": "27ec3d5b",
    "metadata": {},
    "outputs": [],
    "source": []
