--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1707,8 +1707,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "27ec3d5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "<class 'int'>\n",
+      "10\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "var = 10\n",
+    "print(var)\n",
+    "print(type(var))\n",
+    "var2 = str(var)\n",
+    "print(var2)\n",
+    "print(type(var2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "512d8819-9e3b-41eb-a84c-a4d1a273afda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install jupyterlab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "582fd98a-b14f-4b25-b227-c157581ccd14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1730,7 +1766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
