--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1971,8 +1971,762 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1edda4bc-9ef4-4904-a163-a5991bf4f792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Str= \"DIGvijay sopan mohite. Dipak Yeshwwant Jagdale\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60a69b06-f6df-44ee-b274-b59c56d60e64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIGvijay sopan mohite. Dipak Yeshwwant Jagdale'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4eed0ed9-b21c-40ce-a5d9-ccbe835e4eb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'digvijay sopan mohite. dipak yeshwwant jagdale'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.casefold()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d77b7a33-a67d-40dc-a3ba-11d05e7487d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digvijay sopan mohite. dipak yeshwwant jagdale'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "215e2417-dea4-4fca-80f7-cb89cd24e622",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digvijay Sopan Mohite. Dipak Yeshwwant Jagdale'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "eee54c04-cf5c-4508-bdf4-78b1bd0dc661",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIGvijay sopan mohite. Dipak Yeshwwant Jagdale'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.expandtabs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "669654da-1c2d-4d2d-90d0-947a050c6e73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\tWorld\t!\n",
+      "Hello   World   !\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Hello\\tWorld\\t!\"\n",
+    "print(text)\n",
+    "expanded_text = text.expandtabs()\n",
+    "print(expanded_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "28f159f3-6ea4-45aa-a40c-d9da7e9464de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIGvijay sopan mohite. Dipak Yeshwwant Jagdale'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bbdc23ef-9b19-478d-bfe7-414fd47af19e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.index('l')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eca25386-1b0e-4acc-8ed6-6319b4b4a615",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.find('l')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "54f0b8c9-85c8-41af-b5e1-483d0632b9f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.find('z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5affe727-9843-437f-bb07-eb3671e97aa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'digVIJAY SOPAN MOHITE. dIPAK yESHWWANT jAGDALE'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.swapcase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "564e91d3-780a-41d2-a8d4-4d380294a9f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.endswith('E')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "391dc81f-bbed-4df7-bf44-7cd41b1d9f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIGvijay sopan mohite. Dipak Yeshwwant Jagdale'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4b24692e-9e70-4b59-b971-7d9184ec434e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str.index('Di')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c13fba60-7e7e-4063-9b63-ea37f62eded1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D w a'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str[23::5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "711f17de-149c-4406-92c0-f67ee3d623c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIGvijay sopan mohite. Dipak Yeshwwant JagdaleDIGvijay sopan mohite. Dipak Yeshwwant JagdaleDIGvijay sopan mohite. Dipak Yeshwwant Jagdale'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str*3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "eb370cbc-e9dd-4184-8b32-110540bb129c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eladgaJ tnawwhseY kapiD .etihom napos yajivGID'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "f494371b-ff84-425c-be7b-006e1b3b4ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ladgaJ tnawwhseY kapiD .etihom napos yajivGID'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c37d2b5a-70f8-4239-86fb-23c6a9994b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dipak Yeshwwant Jagdale'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str[23::]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "ca6b5a2a-88cf-4727-b9d5-ede21251f0a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DpkYswatJga'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Str[-23:-1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "8f991880-deaa-4aec-b76a-483822f565e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "print(a, type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2e4afc48-5746-4105-9527-71906bc95045",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=str(a)\n",
+    "print(b, type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "a9d4d63a-dcfa-4cab-a6cc-8c89ab9922b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000+0j) <class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=complex(a)\n",
+    "print(c, type(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0f55b4f9-7979-4b47-b3a3-ea04033afe46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.imag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "24510269-02ac-4b39-8584-0b74a41d8c35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000.0"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "965e656a-8770-4909-94c2-5b24655630a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.101 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = 10.1010\n",
+    "print(d, type(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "38c3678b-cdf7-4d9e-b26d-bb2b80f8dc11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "idd = int(d)\n",
+    "print(idd, type(idd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "d17c41ec-66f4-40a3-8fa1-b3f1ca9b2bed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10.101+0j) <class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd=complex(d)\n",
+    "print(cd, type(cd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "b16caa71-9395-4423-a8fe-895d64ac96ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.101 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "sd = str(d)\n",
+    "print(sd, type(sd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "b2d6cf64-326f-461e-b2f9-d0269a224a40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4851 <class 'int'>\n",
+      "4851.0 <class 'float'>\n",
+      "(4851+0j) <class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = '4851'\n",
+    "iss = int(s)\n",
+    "print(iss, type(iss))\n",
+    "fs = float(s)\n",
+    "print(fs, type(fs))\n",
+    "cs = complex(s)\n",
+    "print(cs, type(cs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "29fa4950-4ac7-4a4c-b985-379e18fdfccc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4851+0j) <class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 4851+0j\n",
+    "print(c, type(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "c524b30e-26bb-4e96-b6cb-d313d0be2133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ci = int(c)\n",
+    "# print(ci, type(ci))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6986a77c-c76a-4105-a162-a1851b11b785",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140735530066856\n",
+      "140735530067016\n"
+     ]
+    }
+   ],
+   "source": [
+    "# immutability\n",
+    "x=5\n",
+    "print(id(x))\n",
+    "x=10\n",
+    "print(id(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1d663b27-557b-4877-aff5-5bdabe3913ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140735530066856\n",
+      "140735530067016\n"
+     ]
+    }
+   ],
+   "source": [
+    "# immutability\n",
+    "x = 5\n",
+    "print(id(x))  # Output: <some_memory_address>\n",
+    "x = 10\n",
+    "print(id(x))  # Output: <some_different_memory_address>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9b854e79-7423-4573-a5d8-9a0e41dc3605",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "3261741368512\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[1,2,3]\n",
+    "print(list1)\n",
+    "print(id(list1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "54ae71d2-76de-4afb-a1c9-e94ae7aa2b5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, [1, 2, 3]]\n",
+      "3261741368512\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1[2] = [1,2,3]\n",
+    "print(list1)\n",
+    "print(id(list1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6fb6a29-1195-48c8-a11b-09ab0470baea",
    "metadata": {},
    "outputs": [],
    "source": []
